--- a/style.css
+++ b/style.css
@@ -48,4 +48,12 @@ p span {
 .boton {
   font-size: 50px;
 }
-/*# sourceMappingURL=style.css.map */
+
+.ejemplo {
+  margin: auto;
+  width: 40%;
+ }
+ .ejemplo input {
+margin: 5px 0 10px 300px;
+  display: block;
+ }
