--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,58 +1,6 @@
 body{
     background-image: url(/img/fondo.jpg);
   }
-  h1 {
-    color: #CA7218;
-  }
-  
-  #cuadro1, #cuadro2, #cuadro3, #papelera {
-      float: left;
-      width: 90px;
-      height: 90px;
-      padding: 10px;
-      margin: 10px;
-  }
-  
-  #cuadro1{
-      background: #55f;
-  }
-  
-  #cuadro2 {
-      background: #5f5;
-  }
-  
-  #cuadro3 {
-      background: #f55;
-  }
-  
-  #papelera {
-      background: #5ff;
-  }
-  
-  .cuadradito {
-      background: #288;
-      border: 2px solid #882;
-      width: 5px;
-      height: 5px;
-      padding: 0 10px 15px;
-      margin: 5px;
-  }
-  
-  #arrastrable1 {
-      background: #228;
-      border: 2px solid #822;
-  }
-  
-  
-  #arrastrable2 {
-      background: #282;
-      border: 2px solid #228;
-  }
-  
-  #arrastrable3 {
-      background: #822;
-      border: 2px solid #282;
-  }
 
 .animal{
 padding-left: 40px;;
@@ -75,3 +23,7 @@ padding-left: 40px;;
 #salir{
     margin-left: 55rem;
 }
+
+canvas{
+          border:solid;
+     }
