--- a/css/login.css
+++ b/css/login.css
@@ -5,14 +5,15 @@ html {
     margin: 0;
     padding: 0;
     height: 100%;
+    width: 100%;
     background-image: url(/img/fondo3.jpg);
 }
 .user_card {
     height: 400px;
     width: 350px;
-    margin-top: auto;
+    margin-top: 100px;
     margin-bottom: auto;
-    background: #60a3bc;
+    background: #bdc01b;
     position: relative;
     display: flex;
     justify-content: center;
